# oishi-ninja

./: README.md  package-lock.json
.github/workflows/: client.yml
api/: Dockerfile  README.md  app.py  create_sample_data.py  docker-compose.yml  pyproject.toml  run.py  seed_data.py
api/api/: __init__.py  config.py  scripts.py  utilities.py
api/api/models/: __init__.py  ingredient.py  ingredient_quantity.py  like.py  recipe.py
api/api/services/: gunicorn_app.py
api/docker/app/: Dockerfile  entrypoint.sh
api/docker/db/docker-entrypoint-initdb.d/: init.sql
api/docker/nginx/: nginx.conf
api/migrations/versions/: 205468106972_add_description_to_recipe.py  244a02598603_reorganization.py  7e2e575e60d9_initial_migration.py  86b3d80bf1a2_レシピに説明を追加.py  b2bcbdafd59f_initial_migration.py
cdk/: README.md  cdk.context.json  package-lock.json  package.json
cdk/lib/: assets-cert-stack.ts  assets-static-site-stack.ts  client-cert-stack.ts  client-static-site-stack.ts  network-and-database-stack.ts  ssm-parameter-reader.ts  web-api-stack.ts
cdk/lib/utilities/: domain.ts  id.ts  index.ts
cdk/test/: cdk.test.ts
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.vue  main.ts  router.ts  schema.d.ts  style.css  vite-env.d.ts
client/src/components/: ArrowLink.vue  (+7 more)
data/: .gitignore  README.md  constants.js  main.js  optimized-images.js  package-lock.json  package.json
data/libs/: creator.js  openai.js
docs/: README.md  specification.yml
scripts/: deploy-api.sh  deploy-client.sh  upload-api.sh  upload-assets.sh  upload-recipes.sh
(+23 files in other folders)
