[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
start = "run:start_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
